syntax = "proto3";

package calc;

option go_package="calc/calcpb";

message SumMessage {
    int64 num1 = 1;
    int64 num2 = 2;
}

message PrimeNumMessage {
    int64 primeNum = 1;
}

message SumRequest {
    SumMessage sumMessage = 1;
}

message SumResponse {
    int64 result = 1;
}

message PrimeNumRequest {
    PrimeNumMessage primeNumMessage = 1;
}

message PrimeNumResponse {
    int64 result = 1;
}

service CalculatorService {
    rpc CalcSum(SumRequest) returns (SumResponse) {}; 
    rpc PrimeNumberDecomposition(PrimeNumRequest) returns (stream PrimeNumResponse) {};
}
